testdata/baselines/reference/submodule/compiler/mergedModuleDeclarationCodeGen2.errors.txt
mergedModuleDeclarationCodeGen2.ts(6,9): error TS2304: Cannot find name 'foo'.


==== mergedModuleDeclarationCodeGen2.ts (1 errors) ====
    module my.data.foo {
        export function buz() { }
    }
    module my.data {
        function data(my) {
            foo.buz();
            ~~~
!!! error TS2304: Cannot find name 'foo'.
        }
    }